# nlp_comparison

./: README.md
acado/: simple_nlp_acado  simple_nlp_acado.cpp  simple_nlp_result.txt
acado/crane_kul_mhe/: CMakeLists.txt
acado/simple_nlp_acado/: CMakeLists.txt
casadi/cplusplus/simple_nlp/: CMakeLists.txt
casadi/cplusplus/simple_nlp/src/: simple_nlp_codegen.cpp
casadi/python/: simple_nlp_codegen.py  simple_nlp_no_codegen.py
